--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,8 @@ hr {
 }
 
 .container {
+	display: flex;
+	flex-direction: row;
 	padding: 0;
 	margin: 0 auto;
 	width: 100%;
@@ -85,14 +87,14 @@ hr {
 
 .header_pub-info {
 	margin: 0 0 1.6rem;
-	display: flex;
-	flex-direction: column;
+	display: grid;
 	justify-content: center;
 	align-items: center;
 	text-transform: uppercase;
 }
 
 .main-article {
+	display: grid;
 	background-color: #e2e2e2;
 	padding: 1.6rem;
 	width: 100%;
@@ -162,6 +164,7 @@ hr {
 .footer {
 	text-align: center;
 }
+
 
 @media (min-width: 800px) {
 	.header_pub-info {
